cargo-aprz-lib/src/reports/snapshots/cargo_aprz_lib__reports__snapshot_tests__json_report.snap
---
source: cargo-aprz-lib/src/reports/mod.rs
expression: output
---
{
  "crates": [
    {
      "appraisal": {
        "available_points": 1,
        "awarded_points": 1,
        "outcomes": [
          {
            "description": "High stars and good coverage",
            "disposition": "passed",
            "failure_reason": null,
            "name": "high_stars"
          }
        ],
        "reasons": [
          "high_stars"
        ],
        "required_check_failure": false,
        "result": "LOW RISK (score = 100, awarded points = 1, available points = 1)",
        "risk": "low",
        "score": 100.0
      },
      "metrics": {
        "community.repo_stars": 20000,
        "crate.keywords": [
          "async",
          "runtime"
        ],
        "crate.name": "tokio",
        "crate.version": "1.35.0",
        "stability.crate_created_at": "2023-01-15",
        "trust.ci_workflows": true,
        "trust.code_coverage_percentage": 85.5,
        "usage.total_downloads": 50000000
      },
      "name": "tokio",
      "version": "1.35.0"
    },
    {
      "appraisal": {
        "available_points": 1,
        "awarded_points": 0,
        "outcomes": [
          {
            "description": "Low star count",
            "disposition": "failed",
            "failure_reason": null,
            "name": "low_stars"
          }
        ],
        "reasons": [
          "low_stars"
        ],
        "required_check_failure": false,
        "result": "HIGH RISK (score = 0, awarded points = 0, available points = 1)",
        "risk": "high",
        "score": 0.0
      },
      "metrics": {
        "community.repo_stars": 8000,
        "crate.keywords": [
          "serialization"
        ],
        "crate.name": "serde",
        "crate.version": "1.0.195",
        "stability.crate_created_at": "2023-01-15",
        "trust.ci_workflows": true,
        "trust.code_coverage_percentage": 92.3,
        "usage.total_downloads": 100000000
      },
      "name": "serde",
      "version": "1.0.195"
    },
    {
      "metrics": {
        "community.repo_stars": 4500,
        "crate.keywords": [
          "error",
          "handling"
        ],
        "crate.name": "anyhow",
        "crate.version": "1.0.75",
        "stability.crate_created_at": "2023-01-15",
        "trust.ci_workflows": false,
        "trust.code_coverage_percentage": 78.9,
        "usage.total_downloads": 30000000
      },
      "name": "anyhow",
      "version": "1.0.75"
    }
  ]
}
